[package]
name = "smbkup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
dirs = "5.0.1"
pavao = "0.2.4"
rpassword = "7.3.1"
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"
toml = "0.8.8"
zip = "0.6.6"
zip-extensions = "0.6.2"
